--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   brasil_fields: ^1.14.3
   money_input_formatter: ^2.0.0
   intl: ^0.19.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
