--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  cloud_firestore: ^4.15.10
+  cloud_firestore: ^5.1.0
   currency_text_input_formatter: ^2.1.14
-  firebase_auth: ^4.18.0
-  firebase_core: ^2.27.2
-  firebase_storage: ^11.6.11
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  firebase_storage: ^12.1.1
   fluttertoast: ^8.2.4
   image_picker: ^1.0.7
   mask_text_input_formatter: ^2.9.0
@@ -49,6 +48,9 @@ dependencies:
   money_input_formatter: ^2.0.0
   intl: ^0.19.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  mailer: ^6.1.2
+  build_runner: ^2.4.11
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
